[gd_scene load_steps=5 format=3 uid="uid://biv76ds6kbuu5"]

[ext_resource type="Script" uid="uid://bh0iwl5w44bxo" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cjf0bh36icbl3" path="res://scenes/menus/main_menu.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cs1mdw3a05ubj" path="res://scenes/menus/options_menu.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://bxh1gewhoevqo" path="res://scenes/menus/controls_menu.tscn" id="4_7mycd"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="TransitionLayer" type="Control" parent="."]
z_index = 1000
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menus" type="Control" parent="."]
z_index = 100
custom_minimum_size = Vector2(596, 256)
layout_mode = 3
anchors_preset = 0
offset_right = 596.0
offset_bottom = 256.0

[node name="MainMenu" parent="Menus" instance=ExtResource("2_1bvp3")]
layout_mode = 1

[node name="OptionsMenu" parent="Menus" instance=ExtResource("3_lquwl")]
layout_mode = 1
offset_left = 606.0
offset_right = 872.0

[node name="ControlsMenu" parent="Menus" groups=["menu"] instance=ExtResource("4_7mycd")]
layout_mode = 1
anchors_preset = 8
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 585.0
offset_top = -128.0
offset_right = 835.0
offset_bottom = 48.0
grow_vertical = 2

[node name="SceneParent" type="Node" parent="."]

[node name="MainView" type="SubViewport" parent="SceneParent"]
size = Vector2i(592, 256)

[node name="HUD" type="Control" parent="SceneParent"]
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
